[project]
name = "docker-mtls-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tyler Allen", email = "tallen12@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "cyclopts>=3.24.0",
    "fastapi>=0.118.0",
]

[project.scripts]
docker-mtls-example = "docker_mtls_example:main"
cert-manager = "docker_mtls_example.scripts.cryptography.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]


[tool.ruff]
line-length = 120 # Set your desired line length here

[tool.pyright]
reportPrivateImportUsage = "none"
